deploy/monitoring/components/node-metrics/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-kubernetes-api-egress
  namespace: k8s-incident-monitoring
  labels:
    app.kubernetes.io/part-of: k8s-incident-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-kubelet-egress
  namespace: k8s-incident-monitoring
  labels:
    app.kubernetes.io/part-of: k8s-incident-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 10250
